--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://stzuko.github.io/",
+  "homepage": "http://stzuko.github.io",
   "dependencies": {
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
+    "clean": "gh-pages-clean",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
